added new navbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
 
-    <form action="" class="theme-selector">
+    <nav class="nav">
+        <ul class="list-container">
+            <li class="list-item">Home</li>
+            <li class="list-item">About</li>
+            <li class="list-item">Blog</li>
+            <li class="list-item theme-option">Theme</li>
+        </ul>
+    </nav>
+
+    <!-- <form action="" class="theme-selector">
         <fieldset>
 
             <legend class="visually-hidden">Pick a color scheme</legend>
@@ -24,7 +33,7 @@
             <input type="radio" name="theme" id="dark">
 
         </fieldset>
-    </form>
+    </form> -->
     
 </body>
 </html>
