made theme switcher responsive

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Select Theme</title>
     <!-- custom css -->
@@ -12,7 +13,6 @@
       <ul class="list-container">
         <li class="list-item">Home</li>
         <li class="list-item">About</li>
-        <li class="list-item">Blog</li>
         <li class="list-item theme-option">
             Theme
             <form action="" class="theme-selector">
@@ -31,6 +31,7 @@
 
                 </fieldset>
             </form>
+            <li class="list-item">Blog</li>
         </li>
       </ul>
     </nav>
