added header with basic styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
     <nav class="nav">
       <ul class="list-container">
         <li class="list-item">Home</li>
@@ -35,5 +36,11 @@
         </li>
       </ul>
     </nav>
+
+    <header>
+        <h1>Do what you love</h1>
+        <h4>Lorem ipsum dolor sit amet consectetur adipisicing.</h4>
+    </header>
+
   </body>
 </html>
