--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </nav>
 
     <header>
-        <h1>Do what you love</h1>
-        <h4>Lorem ipsum dolor sit amet consectetur adipisicing.</h4>
+        <h1>Make something you love</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam nemo unde adipisci!</p>
     </header>
 
   </body>
