modified header texts

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <header>
         <h1>Make something you love</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam nemo unde adipisci!</p>
+        <p>Choose your favorite color as website theme</p>
     </header>
 
   </body>
