added section for buying product html only

--- a/index.html
+++ b/index.html
@@ -42,5 +42,25 @@
         <p>Choose your favorite color as website theme</p>
     </header>
 
+    <section>
+      <h2>Buy our product</h2>
+      <div class="product-contaniner">
+        <div class="product-card">
+          <h5>Budget</h5>
+          <hr>
+          <p>20 Responsive Designs</p>
+          <p>10 Dashboards</p>
+          <p>1 TB Storage</p>
+          <p>6 TB Bandwidth</p>
+          <p>24-hour Support</p>
+          <hr>
+          <div class="card-price-btn">
+            <h5>$200/mo</h5>
+            <button>Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </body>
 </html>
