--- a/index.html
+++ b/index.html
@@ -59,6 +59,34 @@
             <button>Buy Now</button>
           </div>
         </div>
+        <div class="product-card">
+          <h5>Budget</h5>
+          <hr>
+          <p>20 Responsive Designs</p>
+          <p>10 Dashboards</p>
+          <p>1 TB Storage</p>
+          <p>6 TB Bandwidth</p>
+          <p>24-hour Support</p>
+          <hr>
+          <div class="card-price-btn">
+            <h5>$200/mo</h5>
+            <button>Buy Now</button>
+          </div>
+        </div>
+        <div class="product-card">
+          <h5>Budget</h5>
+          <hr>
+          <p>20 Responsive Designs</p>
+          <p>10 Dashboards</p>
+          <p>1 TB Storage</p>
+          <p>6 TB Bandwidth</p>
+          <p>24-hour Support</p>
+          <hr>
+          <div class="card-price-btn">
+            <h5>$200/mo</h5>
+            <button>Buy Now</button>
+          </div>
+        </div>
       </div>
     </section>
 
