--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h2>Buy our product</h2>
       <div class="product-contaniner">
         <div class="product-card">
-          <h5>Budget</h5>
+          <h2>Basic</h2>
           <hr>
           <p>20 Responsive Designs</p>
           <p>10 Dashboards</p>
@@ -60,7 +60,7 @@
           </div>
         </div>
         <div class="product-card">
-          <h5>Budget</h5>
+          <h2>Standard</h2>
           <hr>
           <p>20 Responsive Designs</p>
           <p>10 Dashboards</p>
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="product-card">
-          <h5>Budget</h5>
+          <h2>Premium</h2>
           <hr>
           <p>20 Responsive Designs</p>
           <p>10 Dashboards</p>
@@ -83,12 +83,15 @@
           <p>24-hour Support</p>
           <hr>
           <div class="card-price-btn">
-            <h5>$200/mo</h5>
+            <h3>$200/mo</h3>
             <button>Buy Now</button>
           </div>
         </div>
       </div>
     </section>
+
+    <main class="main"></main>
+    <main class="main"></main>
 
   </body>
 </html>
