added and linked js file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Select Theme</title>
     <!-- custom css -->
     <link rel="stylesheet" href="style.css" />
+    <!-- custom javascript -->
+    <script src="script.js" defer></script>
   </head>
   <body>
 
