fixed dark theme capital case bug

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                     <input type="radio" name="theme" id="green" data-theme="greenTheme">
 
-                    <input type="radio" name="theme" id="dark"  data-theme="DarkTheme">
+                    <input type="radio" name="theme" id="dark"  data-theme="darkTheme">
 
                 </fieldset>
             </form>
