changed data theme names

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                 <fieldset>
 
                     <legend class="visually-hidden">Pick a color scheme</legend>
-                    <input type="radio" name="theme" id="light" data-theme="defaultTheme" checked>
+                    <input type="radio" name="theme" id="light" data-theme="default" checked>
                     
-                    <input type="radio" name="theme" id="pink"  data-theme="pinkTheme">
+                    <input type="radio" name="theme" id="pink"  data-theme="pink">
 
-                    <input type="radio" name="theme" id="blue"  data-theme="blueTheme">
+                    <input type="radio" name="theme" id="blue"  data-theme="blue">
 
-                    <input type="radio" name="theme" id="green" data-theme="greenTheme">
+                    <input type="radio" name="theme" id="green" data-theme="green">
 
-                    <input type="radio" name="theme" id="dark"  data-theme="darkTheme">
+                    <input type="radio" name="theme" id="dark"  data-theme="dark">
 
                 </fieldset>
             </form>
